# paper-graph

./: README.md  main.py  pyproject.toml
outputs/: paper_data.json
src/: __init__.py  api_client.py  cli.py  paper_graph.py
